--- a/index.html
+++ b/index.html
@@ -8,17 +8,64 @@
   </head>
   <body>
     <h1>オセロゲーム</h1>
+    <button id="ruleBtn">ルール説明</button>
+    <div
+      id="ruleBox"
+      style="
+        display: none;
+        margin-top: 10px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        background-color: #f9f9f9;
+      "
+    >
+      <div style="text-align: right">
+        <button id="closeRuleBtn">× 閉じる</button>
+      </div>
+      <h3>🔍 ゲームのルール</h3>
+      <p>
+        オセロは、相手の石を挟んで自分の石に変えていくゲームです。<br />
+        各ターンで、相手の石を挟める位置にのみ石を置けます。<br />
+        石を置けない場合はパスします。<br />
+        石をすべて置き終わるか、両者が連続でパスした場合にゲーム終了です。
+      </p>
+
+      <h4>🎮 ボタンの説明</h4>
+      <ul>
+        <li><strong>パス</strong>：手がないときにスキップできます</li>
+        <li><strong>一手戻す</strong>：1手前（CPUの場合2手）に戻します</li>
+        <li><strong>リスタート</strong>：盤面を初期化して最初から</li>
+        <li>
+          <strong>色変更モード</strong
+          >：石をクリックして色を手動で変えられるモードです
+        </li>
+        <li><strong>即終了</strong>：その場でゲームを強制終了します</li>
+      </ul>
+    </div>
+
     <div id="board"></div>
     <p id="turn">黒の番です</p>
     <div id="controls">
       <button id="passBtn">パスする</button>
       <button id="undoBtn">一手戻る</button>
       <button id="restartBtn">リスタート</button>
+      <button id="toggleEditBtn">色変更モード</button>
+      <button id="endBtn">ゲームを終了</button>
     </div>
     <div id="scoreBoard">
       ⚫ 黒：<span id="blackCount">2</span> ⚪ 白：<span id="whiteCount"
         >2</span
       >
+    </div>
+
+    <div>色変更モード: <span id="editModeStatus">OFF</span></div>
+
+    <div>※「色変更モード」は好きな石の色を変えられるようになります。</div>
+
+    <div>経過時間: <span id="stopwatch">0.0</span> 秒</div>
+    <div>
+      <h3>タイム履歴</h3>
+      <ul id="historyList"></ul>
     </div>
     <script src="script.js"></script>
   </body>
